@@ -492,27 +492,27 @@ static void testWebExtensionPageID(WebViewTest* test, gconstpointer)
 
     test->loadURI("foo://host6/");
     test->waitUntilLoadFinished();
-    g_assert_true(pageIDChangedEmitted);
+    g_assert_false(pageIDChangedEmitted);
     pageIDChangedEmitted = false;
-    g_assert_cmpuint(pageID, <, webkit_web_view_get_page_id(test->m_webView));
+    g_assert_cmpuint(pageID, ==, webkit_web_view_get_page_id(test->m_webView));
     pageID = webkit_web_view_get_page_id(test->m_webView);
     proxy = test->extensionProxy();
     checkTitle(test, proxy.get(), "Title6");
 
     test->goBack();
     test->waitUntilLoadFinished();
-    g_assert_true(pageIDChangedEmitted);
+    g_assert_false(pageIDChangedEmitted);
     pageIDChangedEmitted = false;
-    g_assert_cmpuint(pageID, >, webkit_web_view_get_page_id(test->m_webView));
+    g_assert_cmpuint(pageID, ==, webkit_web_view_get_page_id(test->m_webView));
     pageID = webkit_web_view_get_page_id(test->m_webView);
     proxy = test->extensionProxy();
     checkTitle(test, proxy.get(), "Title5");
 
     test->goForward();
     test->waitUntilLoadFinished();
-    g_assert_true(pageIDChangedEmitted);
+    g_assert_false(pageIDChangedEmitted);
     pageIDChangedEmitted = false;
-    g_assert_cmpuint(pageID, <, webkit_web_view_get_page_id(test->m_webView));
+    g_assert_cmpuint(pageID, ==, webkit_web_view_get_page_id(test->m_webView));
     pageID = webkit_web_view_get_page_id(test->m_webView);
     proxy = test->extensionProxy();
     checkTitle(test, proxy.get(), "Title6");
