@@ -1,3 +1,15 @@
+2021-06-21  Chris Dumez  <cdumez@apple.com>
+
+        [WK2] Don't process-swap on navigations within the same non-HTTP(s) protocol
+        https://bugs.webkit.org/show_bug.cgi?id=227220
+        <rdar://79106461>
+
+        Unreviewed follow-up to fix GTK test that started failing after the behavior
+        change in r279079.
+
+        * TestWebKitAPI/Tests/WebKitGLib/TestWebExtensions.cpp:
+        (testWebExtensionPageID):
+
 2021-06-21  Jonathan Bedard  <jbedard@apple.com>
 
         [results.webkit.org] XSS vulnerability in test name
